[gd_scene load_steps=2 format=3 uid="uid://y7v8xra3ou2a"]

[ext_resource type="Script" path="res://level_commons/dev_settings.gd" id="1_vlfok"]

[node name="DeveloperSettingsUI" type="CanvasLayer"]
script = ExtResource("1_vlfok")

[node name="DevSettings" type="ScrollContainer" parent="."]
offset_right = 376.0
offset_bottom = 474.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DevSettings"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="DevSettings/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DevSettings/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DevSettings/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="RichTextLabel" parent="DevSettings/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Developer Settings"
fit_content = true
autowrap_mode = 0

[node name="ExpandSettingsCheckbox" type="CheckBox" parent="DevSettings/VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="SettingsList" type="PanelContainer" parent="DevSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DevSettings/VBoxContainer/SettingsList"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Grid" type="GridContainer" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="Label2" type="Label" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
layout_mode = 2
text = "Collected items"

[node name="CollectedItems" type="SpinBox" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label18" type="Label" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
layout_mode = 2
text = "Collected items in level:"

[node name="CollectedItemsInLevel" type="SpinBox" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label17" type="Label" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
layout_mode = 2
text = "Temporary collected items:"

[node name="TemporaryCollectedItems" type="SpinBox" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
layout_mode = 2
text = "Click to skip to end of level"

[node name="ToEndButton" type="Button" parent="DevSettings/VBoxContainer/SettingsList/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "To End"
